--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_history">Watch history</string>
     <string name="title_mylist">My List</string>
-    <string name="title_settings">Settings</string>
+    <string name="title_schedule">Schedule</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
